[package]
name = "reconcile"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A reconciliation storage service to sync a key-value map over multiple instances"
repository = "https://github.com/Akvize/reconcile-rs"
# Keep the published crate to the library proper. Everything below is repository-only material —
# turnkey Kubernetes example/deployment scaffolding and long-form design docs — that bloats the
# package without serving consumers of the crate. (Relative links to these from README still
# resolve, because crates.io rewrites them to the repository.)
exclude = [
    "pre-commit",
    "CONTRIBUTING.md",
    "examples/k8s/",
    "ARCHITECTURE.md",
    "SOTA.md",
    "PROGRESS.md",
]

[profile.release]
debug = true

[[bench]]
name = "bench"
harness = false

[features]
default = ["mac-blake3"]
# Per-datagram MAC authentication backends (see `src/auth.rs`).
# Exactly one backend is used at build time; `mac-blake3` takes precedence if
# both are enabled. At least one must be enabled or the crate fails to compile.
# (BLAKE3 itself is always pulled in: it backs the range fingerprint, see
# `src/fingerprint.rs`.)
mac-blake3 = []
mac-hmac = ["dep:hmac", "dep:sha2"]
# Wipe the cluster key from memory on drop (defense in depth).
zeroize = ["dep:zeroize"]
# Per-datagram payload confidentiality via authenticated encryption (AEAD).
# When enabled, `Config::with_encryption` upgrades the keyed protocol from a
# plaintext-payload MAC to XChaCha20-Poly1305 over the same cluster key. See
# `src/auth.rs` and issue #96.
encryption = ["dep:chacha20poly1305"]
# Emit runtime metrics via the `metrics` facade. Off by default: when disabled, every
# metric call site compiles to a no-op (see `src/observability.rs`), so the default build
# keeps its lean dependency footprint.
metrics = ["dep:metrics"]
# Install a Prometheus recorder and expose a `/metrics` HTTP endpoint (see
# `src/prometheus.rs`). Pulls the exporter's HTTP listener stack; opt-in only. Implies
# `metrics`, which feeds the same facade.
metrics-prometheus = ["metrics", "dep:metrics-exporter-prometheus"]
# Reserved for a future `hickory-resolver`-backed DNS discovery adapter (SRV records, explicit
# TTL/ndots control, robust resolution in static/musl images). Not implemented yet: the default
# `DnsDiscovery` uses the system resolver via `tokio::net::lookup_host` and needs no extra crate.
dns-hickory = []
# Exposes the `crate::testing` seam (re-exports of `pub(crate)` reconciliation internals) so the
# external integration-test oracles (`tests/diff.rs`, `tests/proptest_hrtree.rs`) can reach them.
# No deps; not part of the supported public API.
internal-testing = []

# The turnkey Kubernetes example. It is a multi-file example (`examples/k8s/main.rs`), so its
# target is named after the directory: `cargo run --example k8s`. The metrics/readiness endpoint
# (the Kubernetes probes target `/metrics`) is built in via the feature below. The rest of
# `examples/k8s/` (manifests, kind playground, Dockerfile) is deployment scaffolding.
[[example]]
name = "k8s"
path = "examples/k8s/main.rs"
required-features = ["metrics-prometheus"]

[dependencies]
arrayvec = "0.7.4"
bincode = "1.3.3"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", optional = true }
chrono = { version = "0.4.31", features = ["serde"] }
hmac = { version = "0.12", optional = true }
ipnet = "2.9.0"
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false, features = ["http-listener"] }
once_cell = "1.21.3"
parking_lot = "0.12.1"
rand = "0.8.5"
range-cmp = "1"
serde = { version = "1.0.192", features = ["derive"] }
sha2 = { version = "0.10", optional = true }
# Sizes the gossip UDP socket's SO_RCVBUF / SO_SNDBUF (issue #169). Already in the tree as a
# transitive dependency of tokio, so this is essentially free.
socket2 = "0.5"
tokio = { version = "1.33.0", features = ["net", "time", "rt", "macros"] }
tracing = "0.1.40"
zeroize = { version = "1.7", optional = true, features = ["derive"] }

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
criterion = "0.5.1"
metrics-util = { version = "0.19", default-features = false, features = ["debugging"] }
proptest = "1.11.0"
rand = "0.8.5"
tempfile = "3"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
