[package]
name = "reconcile-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
diff = { version = "0.1.0", path = "../diff" }
reconcilable = { version = "0.1.0", path = "../reconcilable" }
serde = "1.0.190"
tokio = { version = "1.33.0", features = ["net"] }
tracing = "0.1.40"
