[package]
name = "reconcile"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
diff = { version = "0.1.0", path = "../diff" }
htree = { version = "0.1.0", path = "../htree" }
serde = "1.0.190"
tokio = { version = "1.33.0", features = ["net", "time"] }
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
